# CAS_AML_Final_Project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/evaluation/: final_evaluation_summary.csv  final_evaluation_summary.json  final_evaluation_summary.md  final_evaluation_summary_with_hyde_reranked.csv  final_evaluation_summary_with_hyde_reranked.json  final_evaluation_summary_with_hyde_reranked.md  rag_strategy_summary.csv
data/evaluation/llm_judge/: llm_judge_scores.csv  llm_judge_summary.csv
data/evaluation/ragas/: ragas_scores.csv  ragas_summary.csv
input_literature/: list_DOIs.txt
src/final_project/: __init__.py
src/final_project/backend/: __init__.py  __main__.py  app.py  chroma_store.py  config.py  deployment.py  embeddings.py  llm.py  rerankers.py  retrieval.py  schemas.py  upload.py  upload_cli.py
src/final_project/chunking/: __init__.py  __main__.py  cli.py  models.py  pipeline.py  text.py
src/final_project/evaluation/: __init__.py  collect_results.py  dataset.py  judge_results.py  metrics.py  ragas_results.py  run_experiment.py  strategies.py
src/final_project/extraction/: __init__.py  cli.py  corpus.py  errors.py  grobid.py  io.py  models.py  pipeline.py  pmc.py  pymupdf.py  xml_utils.py
tests/: test_backend.py  test_chunking.py  test_corpus.py  test_evaluation.py  test_grobid.py  test_pipeline.py  test_pmc.py  test_pymupdf.py
tests/fixtures/: grobid_sample.tei.xml  pmc_sample.xml
