[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "final-project-rag"
version = "0.1.0"
description = "Scientific-paper RAG backend for dog behaviour question answering"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "PyMuPDF>=1.24,<2",
  "requests>=2.31,<3",
  "Unidecode>=1.3,<2",
  "python-dotenv>=1.0,<2",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "chromadb>=1.5,<2",
  "onnxruntime<1.24",
  "google-genai>=1.0,<2",
  "openai>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]
evaluation = [
  "ragas>=0.4,<0.5",
  "langchain<1.0",
  "langchain-core<1.0",
  "langchain-community<0.4",
  "langchain-openai<1.0",
]
local-embeddings = [
  "sentence-transformers[image]>=4.1,<5",
  "torch>=2",
  "transformers>=4.53,<5",
  "accelerate>=0.30",
  "pillow>=10",
]

[project.scripts]
rag-extract = "final_project.extraction.cli:main"
rag-chunk = "final_project.chunking.cli:main"
rag-upload-chunks = "final_project.backend.upload_cli:main"
rag-evaluate = "final_project.evaluation.run_experiment:main"
rag-judge = "final_project.evaluation.judge_results:main"
ragas-evaluate-results = "final_project.evaluation.ragas_results:main"
rag-collect-results = "final_project.evaluation.collect_results:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
